# softschema

./: .flowmarkignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  Makefile  README.md  SECURITY.md  SUPPLY-CHAIN-SECURITY.md  build-constraints.txt  build-metadata.json  build-requirements.in  lefthook.yml  package-lock.json  package.json  pyproject.toml  release-metadata.json
.agents/skills/softschema/: SKILL.md
.claude/: .gitignore
.claude/skills/softschema/: SKILL.md
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  conformance-pages.yml  publish.yml  release-candidates.yml
.tbd/: config.yml
.tbd/data-sync/issues/: is-01ksdqnfz9yj7ryk3z0dxrx1sc.md  is-01ksdrgxwx3cyrgvdn62dy1v0w.md  is-01ksdw07thta724tst7r7nv1bp.md  is-01ksdw0j74enrzrkgq3qm8xyw4.md  is-01ksdw0jc2j6w64rf6hae2qafz.md  is-01ksdw0jgk5xm02zzvr874wav5.md  is-01ksdw0jn1t9daj0wcs8kgcca6.md  is-01ksdw0jthsf9q4rc1dmm6yfh5.md  is-01ksejcgmh2ec56xjzx6ab438y.md  is-01ksejcjkrf4a7neq3xcxwmpgd.md  is-01ksejcmkqzpyysqm4fb8ycy79.md  is-01ksejcpt8f4wzrfwk1ecwpf0q.md  is-01ksejctbvjk3eepy24yyvsbb8.md  is-01ksejcv8dd7h5xb721rh3gn3d.md  is-01ksejcxgamzwy07yssmmwg8rc.md  is-01ksejcz9ttg8fnpwktjwj0jh4.md  is-01ksexmz68a5krezhmv9cavey9.md  is-01ksexn1mr4b1wvg6cz91yhzm5.md  is-01ksexn3nhveev80744a6vysar.md  is-01ksexn5t6b8z0j8e5jays7bd7.md  is-01ksexn7a6z7teadnmcnja4t3g.md  is-01ksexn9bbxb41dvf18kq0dat6.md  is-01ksexnats38ya22bde90w065s.md  is-01ksexndke7ysd53r3jy3e0aq0.md  is-01kshb5636qx5g9ha5xaa6b5qb.md  is-01kshb5jkpcg4zf37hd1k89ey4.md  is-01kshb5xk61cvpc18r7tk88n12.md  is-01kshb69gjwxqeter8bt3vbg87.md  is-01kshb6k5nqgyvs71hh2e83dpp.md  is-01kshb6yw8wj1t8qf1k2tqw829.md  is-01kshb7m8fb7a0bcegmqp2c1vj.md  is-01kshb7zwjhyehkvwq9x9v9gc3.md  is-01kshb8ac11et3tw1cxxjg2dgf.md  is-01ksrhqb66e5zaa8z18zbtkkk1.md  is-01ksrhz7s14nd2fjf918y2dxkg.md  is-01ksrhz9r13j0zvmyavs2dpw4m.md  is-01ksrhzc14f803qgfhf2w1rhw3.md  is-01ksrhze06bhja9gaabz6k11de.md  is-01ksrkx7w08geyfhz9jch2gz8f.md  is-01ksrkxc78w5rgj3jfp2fq7a4s.md  (+242 more)
.tbd/data-sync/mappings/: ids.yml
conformance/: README.md  WALKTHROUGH.md  consumer.py  evolution.json  implementations.json  manifest.lock.json  manifest.yaml  publication.json  publication.py  run.py
conformance/adapters/: javascript-adapter.mjs  python_adapter.py
conformance/agent-skills/: activation-matrix-v1.json  activation-matrix-v1.yaml  bootstrap-commands-v1.json  bootstrap-commands-v1.yaml
conformance/cases/artifact-extensions/: artifact.md  case.yaml  expected.json  (+2 more)
conformance/doctor/: doctor-v1-common.golden.json  doctor-v1-common.golden.yaml
conformance/schemas/: artifact-input-result-v1.schema.json  build-metadata.schema.json  case.schema.json  compiled-schema-profile.schema.json  compiler-input-profile.schema.json  conformance-evolution.schema.json  doctor-result.schema.json  implementation-matrix.schema.json  manifest.schema.json  metadata-legacy.schema.json  metadata-v1.schema.json  metadata.schema.json  public-claims.schema.json  publication-candidate.schema.json  release-manifest.schema.json  release-metadata.schema.json  resource-bundle.schema.json  structural-error.schema.json  validation-result-diagnostic-v1.schema.json  validation-result-legacy.schema.json  vector-suite.schema.json  x-softschema.schema.json
conformance/skill-installer/: agent-targets-v1.json  agent-targets-v1.yaml  known-prior-emissions-v1.json  known-prior-emissions-v1.yaml  project-dry-run.golden.json  project-dry-run.golden.yaml
conformance/vectors/: canonicalization-v1.json  canonicalization-v1.yaml  diagnostic-projection-v1.json  diagnostic-projection-v1.yaml  identity-v1.json  identity-v1.yaml  metadata-v1.json  metadata-v1.yaml  portable-pattern-v1.json  portable-pattern-v1.yaml  portable-yaml-v1.json  portable-yaml-v1.yaml  structural-resources-v1.json  structural-resources-v1.yaml
devtools/: __init__.py  frozen_artifact_smoke.py  installed_artifact_smoke.py  lint.py  npm_consumer.py  public_claims.py  release.py  release_state.py  sync_agent_instructions.py  verify_installed_wheel.py
docs/: agent-compatibility.md  api.md  design.md  development.md  e2e-testing.runbook.md  installation.md  migration-0.3.md  public-claims.yaml  publishing-npm.md  publishing.md  softschema-design.md  softschema-guide.md  softschema-python-design.md  softschema-spec.md  softschema-typescript-design.md  std-doc-guidelines.md
docs/research/: research-2026-05-24-softschema-runtime-design-v8.md
examples/movie_page/: README.md  __init__.py  host_integration.py  host_integration.ts  model.py  model.ts  movie-page.schema.yaml  spirited-away.md  spirited-away.yaml
examples/parity/: model.py  parity.schema.yaml
skills/softschema/: SKILL.md
tests/: yaml_fixtures.py
tests/batch/: discovery-limit-vectors.json  discovery-limit-vectors.yaml  filesystem-vectors.json  filesystem-vectors.yaml  glob-vectors.json  glob-vectors.yaml
tests/diagnostics/: extra-property-location-vectors.json  extra-property-location-vectors.yaml  sarif-vectors.json  sarif-vectors.yaml  source-location-vectors.json  source-location-vectors.yaml  wire-vectors.json  wire-vectors.yaml
tests/golden/: README.md  cross-impl-diff.sh  run.sh
tests/identity/: nested-resource-vectors.json  nested-resource-vectors.yaml  schema-id-vectors.json  schema-id-vectors.yaml
tests/parity/: artifact-format.json  artifact-input.json  artifact-input.yaml  canonical-json-adversarial-vectors.json  canonical-json-adversarial-vectors.yaml  canonicalization-enforcement.json  canonicalization-enforcement.yaml  conformance-adapter-invalid-requests.json  conformance-adapter-invalid-requests.yaml  format-annotations.json  format-annotations.yaml  metadata-schema-paths.json  metadata-schema-paths.yaml  metadata.yaml  portable-patterns.json  portable-patterns.yaml
tests/schema-view/: vectors.json  vectors.yaml
tests/value-domain/: source-separator-vectors.json  source-separator-vectors.yaml  vectors.json  vectors.yaml  yaml-parity-edge-vectors.json  yaml-parity-edge-vectors.yaml
tests/vectors/: README.md  hardening.yaml
(+189 files in other folders)
