[project]
name = "softschema"
description = "Soft schema conventions and validation tools for Markdown/YAML artifacts"
authors = [{ name = "Joshua Levy" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<4.0"
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "frontmatter-format>=0.3.0",
    "jsonschema>=4.20",
    "pydantic>=2",
    "ruamel-yaml>=0.18",
    "strif>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/jlevy/softschema"
Repository = "https://github.com/jlevy/softschema"
Issues = "https://github.com/jlevy/softschema/issues"

[project.scripts]
softschema = "softschema.cli:main"
softschema-py = "softschema.cli:main"

[dependency-groups]
dev = [
    "basedpyright>=1.39.3",
    "codespell>=2.4.2",
    "editables==0.6",
    "hatchling==1.29.0",
    "pytest>=9.0.3",
    "pytest-sugar>=1.1.1",
    "ruff>=0.15.12",
    "rich>=15.0.0",
    "skills-ref @ git+https://github.com/agentskills/agentskills.git@38a2ff82958afee88dadf4831509e6f7e9d8ef4e#subdirectory=skills-ref",
    "uv-dynamic-versioning==0.14.0",
]

[tool.uv]
# Local resolution honors the supply-chain cool-off: cap dependencies at a reviewed
# cutoff (bump deliberately). strif is a reviewed, zero-dependency, first-party package,
# so it gets a per-package exception to that cutoff. Both values need a full RFC3339
# timestamp -- a date-only string fails to parse and uv silently drops the setting. CI
# sets a global UV_EXCLUDE_NEWER (14 days ago) that overrides `exclude-newer` here, and
# because that env override also replaces the per-package map, ci.yml re-passes
# `--exclude-newer-package strif=...` on the CLI. Bump the dates together.
exclude-newer = "2026-06-02T00:00:00Z"
exclude-newer-package = { strif = "2026-06-03T00:00:00Z" }

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[tool.hatch.build.targets.wheel]
packages = ["packages/python/src/softschema"]

[tool.hatch.build.targets.wheel.force-include]
"README.md" = "softschema/resources/README.md"
"release-metadata.json" = "softschema/resources/release-metadata.json"
"build-metadata.json" = "softschema/resources/build-metadata.json"
# Bundle only the public docs. Internal planning under docs/project/ (active
# specs, reviews, research) stays out of the published wheel.
"docs/softschema-guide.md" = "softschema/resources/docs/softschema-guide.md"
"docs/softschema-spec.md" = "softschema/resources/docs/softschema-spec.md"
"docs/softschema-python-design.md" = "softschema/resources/docs/softschema-python-design.md"
"docs/softschema-typescript-design.md" = "softschema/resources/docs/softschema-typescript-design.md"
"docs/installation.md" = "softschema/resources/docs/installation.md"
"docs/development.md" = "softschema/resources/docs/development.md"
"examples/movie_page/README.md" = "softschema/resources/examples/movie_page/README.md"
"examples/movie_page/spirited-away.md" = "softschema/resources/examples/movie_page/spirited-away.md"
"examples/movie_page/model.py" = "softschema/resources/examples/movie_page/model.py"
"examples/movie_page/host_integration.py" = "softschema/resources/examples/movie_page/host_integration.py"
"examples/movie_page/movie-page.schema.yaml" = "softschema/resources/examples/movie_page/movie-page.schema.yaml"
"skills" = "softschema/resources/skills"

[tool.hatch.build.targets.sdist]
include = [
    "README.md",
    "AGENTS.md",
    "LICENSE",
    "build-constraints.txt",
    "build-metadata.json",
    "build-requirements.in",
    "docs",
    "examples",
    "packages/python/README.md",
    "packages/python/src",
    "packages/python/tests",
    "packages/typescript/README.md",
    "release-metadata.json",
    "skills",
]
exclude = [
    # Internal planning (active specs, reviews, research) is not part of the
    # public source distribution.
    "docs/project",
    # Agent and tooling state directories that happen to live at the repo root.
    ".agents",
    ".codex",
    ".claude",
    ".tbd",
    "/conformance",
    "/devtools",
    "/tests",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# E/F/UP/B/I plus higher-signal families: flake8-simplify (SIM),
# comprehensions (C4), Ruff-specific (RUF), flake8-pie (PIE), return (RET),
# and pytest style (PT). Kept narrow to avoid churn against the house style.
select = ["E", "F", "UP", "B", "I", "SIM", "C4", "RUF", "PIE", "RET", "PT"]
ignore = [
    "E501",
    "E402",
    "E731",
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC002",
]

[tool.ruff.lint.isort]
known-first-party = ["softschema"]

[tool.basedpyright]
include = ["packages/python/src", "packages/python/tests", "devtools", "examples", "conformance"]
reportIgnoreCommentWithoutRule = false
reportUnnecessaryTypeIgnoreComment = false
reportMissingTypeStubs = false
reportUnusedCallResult = false
reportAny = false
reportExplicitAny = false
reportImplicitStringConcatenation = false
reportUnreachable = false
reportMissingParameterType = false
reportUnknownParameterType = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnannotatedClassAttribute = false
reportUnusedParameter = false
reportMissingTypeArgument = false
reportPrivateUsage = false

[tool.codespell]
skip = "uv.lock,bun.lock,*.schema.yaml,*/node_modules/*,*/dist/*,*/resources/*"
ignore-words-list = "fo,afterall"

[tool.pytest.ini_options]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["packages/python/tests"]
pythonpath = ["."]
